# openplanner

./: .gitignore  Proj.toml  README.md  ROADMAP.md  index.html  main.js  package-lock.json  package.json  preload.js
server/: Cargo.toml  README.md  example.request
server/server/: Cargo.toml
server/server-macros/: Cargo.toml
server/server-macros/src/: lib.rs
server/server-macros/src/proj/: embed.rs  handler.rs  mod.rs  project.rs
server/server/src/: main.rs  upload.rs
server/server/src/json_multipart/: error.rs  header.rs  mod.rs  multipart.rs  parser.rs  part.rs  value.rs
server/server/src/upload/: error.rs  file_system.rs  handler.rs  json_video_data.rs  mime_serde.rs  mod.rs  save_files.rs  unique_video_uuid.rs
