[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
mime = "0.3.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
server-macros = { version = "0.1.0", path = "../server-macros" }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = [
    "fs",
    "macros",
    "net",
    "rt-multi-thread",
] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
